# openmc-meson-install

./: .gitignore  LICENSE  README.md  meson.build  meson.options  pyproject.toml
tools/: _cmake_common.py  ensure_openmc_source.py  meson_cmake_artifacts.py  openmc_meson_cli.py
