option('openmc_git_url', type: 'string', value: 'https://github.com/openmc-dev/openmc.git', description: 'Git URL used when openmc-src is absent and allow_fetch=true')
option('openmc_revision', type: 'string', value: 'v0.15.3', description: 'OpenMC git branch, tag, or commit to fetch when openmc-src is absent')
option('allow_fetch', type: 'boolean', value: true, description: 'Allow this wrapper to fetch OpenMC if openmc-src is missing')
option('mpi', type: 'boolean', value: false, description: 'Forward OPENMC_USE_MPI to upstream CMake')
option('openmp', type: 'boolean', value: true, description: 'Forward OPENMC_USE_OPENMP to upstream CMake')
option('dagmc', type: 'boolean', value: false, description: 'Forward OPENMC_USE_DAGMC to upstream CMake')
option('libmesh', type: 'boolean', value: false, description: 'Forward OPENMC_USE_LIBMESH to upstream CMake')
option('tests', type: 'boolean', value: false, description: 'Forward OPENMC_BUILD_TESTS to upstream CMake')
option('optimize_native', type: 'boolean', value: false, description: 'Forward OPENMC_USE_NATIVE_ARCH to upstream CMake when supported')
option('force_vendored_libs', type: 'boolean', value: true, description: 'Forward OPENMC_FORCE_VENDORED_LIBS to upstream CMake')
option('bundle_runtime_deps', type: 'boolean', value: true, description: 'Bundle known non-system runtime libraries such as libfmt and libpugixml')
option('hdf5_root', type: 'string', value: '', description: 'Optional HDF5_ROOT forwarded to CMake')
option('openmc_cmake_prefix_path', type: 'string', value: '', description: 'Optional CMAKE_PREFIX_PATH forwarded to OpenMC CMake')
option('openmc_cmake_generator', type: 'string', value: 'Ninja', description: 'CMake generator to use for upstream OpenMC build')
option('extra_cmake_args', type: 'array', value: [], description: 'Additional raw -D arguments forwarded to upstream CMake')
