[build-system]
requires = [
    "meson-python>=0.16.0",
    "meson>=1.3.0",
    "ninja",
    "cmake>=3.22",
    "numpy"
]
build-backend = "mesonpy"

[project]
name = "openmc"
version = "0.15.3"
description = "OpenMC packaged through meson-python while preserving the upstream CMake build"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "The Bluemira Team" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    "numpy",
    "h5py",
    "scipy",
    "ipython",
    "matplotlib",
    "pandas",
    "lxml",
    "uncertainties",
    "setuptools",
    "endf"
]

[project.optional-dependencies]
depletion-mpi = ["mpi4py"]
vtk = ["vtk"]
test = [
    "packaging",
    "pytest",
    "pytest-cov",
    "colorama",
    "openpyxl"
]

[project.scripts]
openmc = "openmc._meson_cli:main"
openmc-native = "openmc._meson_cli:main"

[tool.meson-python.args]
setup = ["--default-library=shared"]

[tool.ruff]
target-version = "py311"
line-length = 89
output-format= "concise"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ANN",     # type annotations
    "EM",      # string in error messages
    "B019",    # using cache memory leaks
    "COM812",  # enforce trailing comma, disagrees with black/ruff format
    "D200",    # docs stuff
    "D203",
    "D205",
    "D301",
    "D400",
    "D401",
    "DOC502",  # Omit non-explicit exceptions from docstrings
    "DTZ005",  # datetime timezone arg
    "FIX002",  # Line contains todo
    "PLW1514", # Specify file open encoding
    "PTH123",  # use Path.open
    "RUF052",  # not dummy variables just private
    "RUF067",  # things in init
    "TRY003",  # put error messages in error class
    "FURB152",  # 3.14 != pi
    # should remove
    "ERA",  # remove commented out code
    "SLF001",  # private method use
    "T201",

]

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)# SPDX-FileCopyrightText:\\s\\d{4}(-(\\d{4}|present))*"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-doc-length = 89
